--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                org.homeworksubmission.homeworksubmission/org.homeworksubmission.homeworksubmission.HelloApplication
+                                org.homeworksubmission.homeworksubmission/org.homeworksubmission.HelloApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
